# effective

./: Cargo.toml  README.md
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/effective/: all.html  enum.EffectResult.html  index.html  sidebar-items.js  struct.Okay.html  struct.Shim.html  trait.Effective.html  trait.Exists.html  trait.Get.html  trait.TryAsyncIterator.html  trait.TryFuture.html  trait.TryGet.html  trait.TryIterator.html
docs/effective/blankets/: struct.Okay.html  struct.Shim.html
docs/effective/impls/: index.html  sidebar-items.js  trait.EffectiveExt.html
docs/effective/impls/block/: index.html  sidebar-items.js  struct.Block.html  struct.FuturesExecutor.html  trait.Executor.html
docs/effective/impls/collect/: index.html  struct.Collect.html
docs/effective/impls/flatten/: index.html  sidebar-items.js  struct.Flatten.html  struct.FlattenError.html  struct.FlattenItems.html  struct.FlattenOkay.html
docs/effective/impls/map/: index.html  struct.Map.html
docs/effective/wrappers/: fn.from_try.html  fn.future.html  fn.iterator.html  index.html  sidebar-items.js  struct.FromTry.html  struct.FutureShim.html  struct.IteratorShim.html
docs/implementors/effective/: trait.TryIterator.js
docs/src/effective/: blankets.rs.html  lib.rs.html
src/: blankets.rs  lib.rs  utils.rs
src/impls/: block.rs  blocking.rs  collect.rs  flatten.rs  fold.rs  for_each.rs  map.rs  mod.rs  unwrap.rs
src/wrappers/: fallible.rs  from_fn.rs  from_try.rs  future.rs  iterator.rs  mod.rs  once.rs  unfold.rs
(+32 files in other folders)
