[package]
name = "effective"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/conradludgate/effective"
license = "MIT"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
description = "An effects library, an alternative to keyword generics"

[dependencies]
futures = "0.3"
pin-project-lite = "0.2"
